# hastache

./: .gitignore  ChangeLog  LICENSE  README.markdown  README.md  README.md.ha  Setup.hs  hastache.cabal  mkReadme.hs  stack.yaml
Text/: Hastache.hs
Text/Hastache/: Context.hs
example/: HastacheContextExample.hs  conditionalBool.hs  conditionalNumber.hs  function.hs  genericsBig.hs  listsGeneric.hs  variables.hs
examples/: HastacheContextExample.hs  conditionalBool.hs  conditionalList.hs  conditionalNumber.hs  function.hs  genericCustom.hs  genericMultipleConstructors.hs  genericsBig.hs  lists.hs  listsByIndex.hs  listsGeneric.2.hs  listsGeneric.hs  monadicFunction.hs  variables.hs  variablesGeneric.hs
src/Text/: Hastache.hs
test/: Main.hs  Old.hs
tests/: RunTest.sh  partFile  test.hs
