name:            hastache
version:         0.5.1
license:         BSD3
license-file:    LICENSE
category:        Text
copyright:       Sergey S Lymar (c) 2011-2013
author:          Sergey S Lymar <sergey.lymar@gmail.com>
maintainer:      Sergey S Lymar <sergey.lymar@gmail.com>
stability:       experimental
synopsis:        Haskell implementation of Mustache templates
cabal-version:   >= 1.8
homepage:        http://github.com/lymar/hastache
bug-reports:     http://github.com/lymar/hastache/issues
build-type:      Simple
description:
    Haskell implementation of Mustache templates (<http://mustache.github.com/>).
    .
    See homepage for examples of usage: <http://github.com/lymar/hastache>

extra-source-files:
    tests/partFile
    tests/RunTest.sh
    tests/test.hs
    README.md

library
  exposed-modules:
    Text.Hastache
    Text.Hastache.Context

  build-depends:
    base == 4.*
    ,bytestring
    ,mtl
    ,transformers
    ,directory
    ,filepath
    ,utf8-string
    ,text
    ,containers
    ,syb
    ,blaze-builder
    ,ieee754

source-repository head
  type:     git
  location: http://github.com/lymar/hastache

test-suite test-hastache
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  hs-source-dirs: tests

  build-depends:
    hastache
   ,base == 4.*
   ,directory
   ,mtl
   ,HUnit
   ,text
   ,bytestring
   ,syb
